--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charet="UTF-8">
     <title>Scrape Information About Mars</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">    
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">   
     <link rel="stylesheet" href="../static/css/style.css"> 
     <!-- <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static', filename='css/style.css') }}"> -->
@@ -30,7 +30,7 @@
                 <img alt="Featured Mars image" src={{ mars.featured_image }}>
             </div>
 
-            <div class="col-lg-4">
+            <div class="col-lg-4 mr-lg-10">
                 <div class="weather">
                     <h3>Current Weather on Mars</h3>
                     <p>{{ mars.mars_weather }}</p>
@@ -45,30 +45,21 @@
             <div class="col-lg-12" id="mars_hemispheres">
                 <h2>Mars Hemispheres</h2>
                 <hr>
-                <div class="gallery">
-                    {% for hem in mars.hemisphere_image_urls %}
-                    <div class="hem_img_section">
-                        <img  src={{ hem.img_url }} width="500px" height="500px">
-                        <figcaption><h4>{{ hem.title }}</h4></figcaption>
-                    </div>
-                    {% endfor %}
-                </div>
             </div>
         </div>
 
-        <div class="row row-cols-1 row-cols-sm-1" id="mars_hemispheres">
+        <div class="row row-cols-1 row-cols-md-1" id="mars_hemispheres">
             {% for hem in mars.hemisphere_image_urls %}
             <div class="col mb-4">
                 <div class="card h-100">
                     <img src={{ hem.img_url }} class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">{{ hem.title }}</h5>
+                        <h4 class="card-title">{{ hem.title }}</h4>
                     </div>
                 </div>
             </div>
             {% endfor %}
         </div>
-
 
     </div>
 
