--- a/templates/index.html
+++ b/templates/index.html
@@ -21,13 +21,14 @@
                 <h2>Latest Mars News</h2>
                 <h4>{{ mars.news_title }}</h4>
                 <p>{{ mars.news_p }}</p>
+                <hr>
             </div>
         </div>
 
         <div class="row">
-            <div class="col-lg-8">
+            <div class="col-lg-8 featured_image">
                 <h2>Featured Mars Image</h2>
-                <img alt="Featured Mars image" src={{ mars.featured_image }}>
+                <img alt="Featured Mars image" class= "featured_image" src={{ mars.featured_image }}>
             </div>
 
             <div class="col-lg-4 mr-lg-10">
@@ -43,6 +44,7 @@
 
         <div class="row">
             <div class="col-lg-12" id="mars_hemispheres">
+                <hr>
                 <h2>Mars Hemispheres</h2>
                 <hr>
             </div>
@@ -52,7 +54,7 @@
             {% for hem in mars.hemisphere_image_urls %}
             <div class="col mb-4">
                 <div class="card h-100">
-                    <img src={{ hem.img_url }} class="card-img-top" alt="...">
+                    <img src={{ hem.img_url }} class="card-img-top" alt={{ hem.title }}>
                     <div class="card-body">
                         <h4 class="card-title">{{ hem.title }}</h4>
                     </div>
@@ -61,6 +63,42 @@
             {% endfor %}
         </div>
 
+        <div class="row">
+            <div class="col-sm-6">
+              <div class="card">
+                <img src={{ mars.hemisphere_image_urls[0].img_url }} class="card-img-top" alt={{ mars.hemisphere_image_urls[0].img_url }}>
+                <div class="card-body">
+                  <h4 class="card-title">{{ mars.hemisphere_image_urls[0].title }} </h4>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-6">
+              <div class="card">
+                <img src={{ mars.hemisphere_image_urls[1].img_url }} class="card-img-top" alt={{ mars.hemisphere_image_urls[1].img_url }}>
+                <div class="card-body">
+                    <h4 class="card-title">{{ mars.hemisphere_image_urls[1].title }} </h4>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-sm-6">
+              <div class="card">
+                <img src={{ mars.hemisphere_image_urls[2].img_url }} class="card-img-top" alt={{ mars.hemisphere_image_urls[2].img_url }}>
+                <div class="card-body">
+                    <h4 class="card-title">{{ mars.hemisphere_image_urls[2].title }} </h4>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-6">
+              <div class="card">
+                <img src={{ mars.hemisphere_image_urls[3].img_url }} class="card-img-top" alt={{ mars.hemisphere_image_urls[3].img_url }}>
+                <div class="card-body">
+                    <h4 class="card-title">{{ mars.hemisphere_image_urls[3].title }} </h4>
+                </div>
+              </div>
+            </div>
+          </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
